--- a/css/equality.css
+++ b/css/equality.css
@@ -1,6 +1,8 @@
 h1 {
-	font-size: 50px ;
+	font-size: 70px ;
 	color: #404040;
+	font-family: 'Poiret One', cursive;
+	text-align: center;
 }
 
 .pic{
